--- a/redesign.scss
+++ b/redesign.scss
@@ -173,7 +173,7 @@ body.is_scrolled .menu-wrapper {
 
 /** wysiwyg **/
 
-.ty-mainbox-body .ty-wysiwyg-content,
+// .ty-mainbox-body .ty-wysiwyg-content,
 .ut2-cat-container .ty-wysiwyg-content,
 .ty-wysiwyg-content[class*="description"]:not(.content-features) {
   padding: 20px 25px;
@@ -964,6 +964,70 @@ select:focus {
 }
 .benefits .benefit p {
   color: inherit;
+}
+.row-fluid .span8 {
+  width: 100%;
+}
+.ty-sidebox-important__title + .ty-sidebox-important__body {
+  padding-top: 40px;
+}
+.ty-wysiwyg-content .services-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -50px;
+  margin-left: -30px;
+
+  & > * {
+    flex: 1 1 25%;
+    max-width: 25%;
+    padding-top: 50px;
+    padding-left: 30px;
+
+    &::before {
+      content: normal;
+    }
+  }
+  &__item {
+    height: 100%;
+
+    &:hover img {
+      transform: scale(1.05);
+    }
+    a {
+      display: block;
+      font-size: 16px;
+      font-weight: 500;
+      padding-top: 1.5em;
+
+      &:hover {
+        text-decoration: none;
+      }
+      &::before {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        content: "";
+        position: absolute;
+      }
+    }
+  }
+  &__image-wrapper {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 62.6%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      transform: scale(1);
+      object-fit: cover;
+      transition: transform 0.3s;
+    }
+  }
 }
 
 /** popup dialog **/
@@ -2129,10 +2193,21 @@ a.ty-quick-view__title {
     max-width: none;
   }
 }
+@media (min-width: 1224px) {
+  .row-fluid .span8 {
+    width: 100%;
+    float: none;
+    margin-left: 0;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .mse2_results--flex > * {
     flex: 1 1 50%;
     max-width: 50%;
+  }
+  .ty-sidebox-important__title-wrapper {
+    font-size: 26px;
   }
 }
 @media screen and (max-width: 992px) {
@@ -2167,6 +2242,12 @@ a.ty-quick-view__title {
   .ty-product-list .ut2-pl__control .ty-btn + .ty-btn {
     margin-left: 0;
   }
+  .ty-wysiwyg-content .services-list {
+    & > * {
+      flex: 1 1 33.3333%;
+      max-width: 33.3333%;
+    }
+  }
 }
 @media screen and (max-width: 812px) {
   .mse2_number_inputs .form-group .input-sm {
@@ -2186,6 +2267,9 @@ a.ty-quick-view__title {
   .container-fluid-row > .row-fluid {
     padding-left: 25px;
     padding-right: 25px;
+  }
+  .ty-sidebox-important__title-wrapper {
+    font-size: 22px;
   }
   .main-content-grid #mse2_results {
     margin: 0;
@@ -2341,6 +2425,16 @@ a.ty-quick-view__title {
     border-top: 1px solid #f0f0f0;
     border-bottom: 1px solid #f0f0f0;
   }
+  .ty-wysiwyg-content .services-list {
+    & > * {
+      flex: 1 1 50%;
+      max-width: 50%;
+    }
+    a {
+      font-size: 14px;
+      padding-top: 1em;
+    }
+  }
 }
 @media screen and (max-width: 575px) {
   .mse2_results--flex > * {
@@ -2356,6 +2450,15 @@ a.ty-quick-view__title {
   }
   .subcategories-popular-wrapper._expanded .popular-button {
     transform: translate(50%, 150%);
+  }
+  .ty-wysiwyg-content .services-list {
+    margin-top: -40px;
+    margin-left: -15px;
+
+    & > * {
+      padding-top: 40px;
+      padding-left: 15px;
+    }
   }
 }
 @media screen and (max-width: 479px) {
