button for tests

--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -201,6 +201,10 @@ body.is_scrolled .menu-wrapper {
   line-height: 1.8;
 }
 
+.ty-wysiwyg-content.full {
+  max-width: 100%;
+}
+
 .ty-wysiwyg-content * {
   padding: 0;
 }
@@ -1722,10 +1726,6 @@ body .calc-prod .ut2-pb__right {
   }
 }
 /** product-page content features **/
-.content-features > * {
-  max-width: 865px;
-}
-
 #vopros_form > .row_form {
   gap: 30px;
   display: flex;
